Rename of reset boolean

--- a/docs/assets/example.config-data.json
+++ b/docs/assets/example.config-data.json
@@ -21,7 +21,7 @@
             "title": "Armhävningar",
             "increseBy": 25,
             "decreseBy": 25,
-            "resetEveryDay": true,
+            "resetOnInterval": true,
             "uuid": "9adb151f-d3f2-afe1-845e-4438419c83a9",
             "value": 0,
             "lastTouched": "2021-01-22T16:41:36.004Z",
@@ -47,7 +47,7 @@
             "title": "Plankan (30sek)",
             "increseBy": 1,
             "decreseBy": 1,
-            "resetEveryDay": true,
+            "resetOnInterval": true,
             "uuid": "d0f4f762-91e2-70eb-1fa4-8b99aabadaca",
             "value": 2,
             "lastTouched": "2021-01-06T12:28:29.317Z",
@@ -60,7 +60,7 @@
             "title": "Ab-rolls",
             "increseBy": 5,
             "decreseBy": 5,
-            "resetEveryDay": true,
+            "resetOnInterval": true,
             "uuid": "0891cc48-798d-9f8b-010c-14b2f2c43416",
             "value": 3,
             "lastTouched": "2021-01-06T12:16:28.406Z",
@@ -86,7 +86,7 @@
             "title": "Squats",
             "increseBy": 10,
             "decreseBy": 10,
-            "resetEveryDay": true,
+            "resetOnInterval": true,
             "uuid": "0891cc48-798d-9ftb-010c-14b2f2c43416",
             "value": 0,
             "lastTouched": "2021-01-04T12:16:28.406Z",
@@ -108,7 +108,7 @@
             "title": "Träningsdagar",
             "increseBy": 1,
             "decreseBy": 1,
-            "resetEveryDay": false,
+            "resetOnInterval": false,
             "uuid": "0891cc48-798d-9f8d-010c-14b2f2c43416",
             "value": 1,
             "lastTouched": "2021-01-04T12:16:28.406Z",
@@ -121,7 +121,7 @@
             "title": "Gummiband armar",
             "increseBy": 1,
             "decreseBy": 1,
-            "resetEveryDay": false,
+            "resetOnInterval": false,
             "uuid": "0891cc48-798d-9f8d-010c-14b2f2c43416",
             "value": 1,
             "lastTouched": "2021-01-04T12:16:28.406Z",
@@ -134,7 +134,7 @@
             "title": "Cykla till jobbet",
             "increseBy": 1,
             "decreseBy": 1,
-            "resetEveryDay": false,
+            "resetOnInterval": false,
             "uuid": "0891cc48-798d-9f8d-010c-14b2f2c43416",
             "value": 1,
             "lastTouched": "2021-01-04T12:16:28.406Z",
